# aether

./: .gitignore  ACTION_PLAN.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  Cargo.toml  DEEP_AUDIT_REPORT.md  EXECUTIVE_SUMMARY.md  FINAL_VERIFICATION_REPORT.md  GAP_ANALYSIS.md  GOVERNANCE.md  HONEST_AUDIT.md  INSTALLATION.md  LAUNCH_CHECKLIST.md  LAUNCH_REPORT.md  LICENSE  MANIFESTO.md  QUANTUM_ENHANCEMENT_PLAN.md  README.md  RELEASE_NOTES.md  RESOURCE_PLAN.md  RISK_ASSESSMENT.md  ROADMAP.md  SECURITY.md  SPECIFICATION.md  SPONSORS.md  SUCCESS_METRICS.md  WHITEPAPER.md  styles.css
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
Algorithms/: CollapseSort.aether  ConsensusLedger.aether  GroverSwarmSearch.aether  MultiversePathtracer.aether  TensorCompression.aether
benches/: crdt_bench.rs  quantum_bench.rs
docs/: architecture.md  bci-spatial.md  crdt-research.md  crdt-theory.md  crdt-usage.md  getting-started.md  intent-philosophy.md  keyword-reference.md  multiverse-primitives.md  quantum-algorithms.md  quantum-computing.md  quantum-gates.md  quantum-primitives.md  standard-library.md  swarm-primitives.md  syntax-reference.md
examples/: 01-hello-world.aether  01_hello_world.aether  02-types.aether  02_reactive_ui.aether  03-inference.aether  03_quantum_algorithm.aether  04-modules.aether  04_multiverse_optimization.aether  05-imports.aether  05_swarm_application.aether  06-functions.aether  06_bci_integration.aether  07-intents.aether  07_database_query.aether  08-crdt-counter.aether  08_ai_model.aether  09-crdt-set.aether  09_game_engine.aether  10-distributed.aether  10_fullstack_app.aether  11-quantum-basics.aether  12-swarm-basics.aether  13-file-io.aether  14-networking.aether  15-error-handling.aether  16-generics.aether  17-traits.aether  18-collections.aether  19-math.aether  20-real-world.aether
libraries/: README.md
logo/: README.md
media/: email-template.md  launch-article.md  press-release.md  social-media-posts.md
scripts/: aether-installer-gui.ps1  build-all.sh  build-linux.sh  build-macos.sh  build-windows.bat  generate-logo-png.sh  install-windows.ps1  install.sh  register-file-association-windows.ps1  register-file-association.sh  test-installation.sh  uninstall.sh  verify-install.sh
src/: lib.rs  main.rs
tests/: crdt_tests.rs  (+5 more)
(+195 files in other folders)
