[package]
name = "aether"
version = "0.2.0"
authors = ["AETHER Core Team <core-team@aether-lang.org>"]
edition = "2024"
description = "A post-quantum, intent-driven, self-healing programming language toolchain compiled in Rust."
license = "MIT"
repository = "https://github.com/devsamikhan/aether"
homepage = "https://aether-lang.org"

[lib]
name = "aether"
path = "src/lib.rs"

[[bin]]
name = "aether"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "quantum_bench"
harness = false

[[bench]]
name = "crdt_bench"
harness = false

