[package]
name = "aether"
version = "0.2.0"
edition = "2021"
authors = ["Sami Ullah Khan <devsamikhan@example.com>"]
description = "AETHER: A research-oriented programming language exploring intent-driven abstractions"
license = "MIT"
repository = "https://github.com/devsamikhan/aether"
readme = "README.md"
keywords = ["compiler", "programming-language", "rust", "crdt"]
categories = ["compilers", "development-tools"]

[dependencies]
# Core dependencies
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
pyo3 = { version = "0.21", features = ["auto-initialize", "macros", "abi3-py38"] }

# For CRDT library
hashbrown = "0.14"

# For benchmarks
criterion = "0.5"

# For colored output
colored = "2.1"

# For file operations
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bench]]
name = "crdt_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "aether"
path = "src/main.rs"

[lib]
name = "aether"
path = "src/lib.rs"
